--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
   <version>0.2.0</version>
   <name>Net Speech API</name>
   <description>Java API for the online speech recognition services provided by phon.ioc.ee</description>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -67,6 +70,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
